# asset-ledger-old

./: .env.example  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  VERIFICATION_CHECKLIST.md  push-ssh-local.sh
app/: Dockerfile  manage.py  pyproject.toml  pytest.ini
app/assetledger/: settings.py  wsgi.py
app/ingest/: __init__.py  admin.py  models.py
app/ingest/management/commands/: ingest_csv.py  pull_sheets.py
app/ingest/migrations/: 0001_initial.py
app/pipeline/: __init__.py  admin.py  match.py  models.py  normalize.py  promote.py  stage.py
app/pipeline/management/commands/: pipeline_run.py
app/pipeline/migrations/: 0001_initial.py
app/tests/: test_bronze_idempotency.py  test_matching_outputs.py  test_promote_gold.py  test_stage_silver.py  test_views_exist.py
assets/: forms.py  models.py  urls.py  utils.py  views.py
assets/migrations/: 0003_asset_computer_serial.py
docker/: compose.yml
docker/pgadmin/: servers.json
docs/: ARCHITECTURE.md  PRD.md  RUNBOOK.md
docs/PROMPTS/: claude_build.md
extras/: mb-scan-bundle.sh
pgadmin-config/: servers.json
sample_data/: drive_removal_log.csv  shred_log_serials.csv
scripts/: backup_db.sh  restore_db.sh  verify.sh
templates/: base.html  home.html  login.html
templates/assets/: asset_detail.html  drive_removals_import.html
